// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppIcon renders correctly 1`] = `
<Text
  allowFontScaling={false}
  style={
    Array [
      Object {
        "color": "black",
        "fontSize": 60,
      },
      undefined,
      Object {
        "fontFamily": "Material Icons",
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      Object {},
    ]
  }
>
  
</Text>
`;

exports[`AppIcon renders with different color 1`] = `
<Text
  allowFontScaling={false}
  style={
    Array [
      Object {
        "color": "orange",
        "fontSize": 30,
      },
      undefined,
      Object {
        "fontFamily": "Material Icons",
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      Object {},
    ]
  }
>
  
</Text>
`;
